# spiderpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile.dxg
buildscripts/: build_installer_win32.bat  build_installer_x64.bat  build_solution_win32.bat  build_solution_x64.bat
buildscripts/debug/: vs2017_win32.bat  vs2017_win32_without_tests.bat  vs2017_x64.bat  vs2017_x64_without_tests.bat
buildscripts/release/: vs2017_win32.bat  vs2017_win32_without_tests.bat  vs2017_x64.bat  vs2017_x64_without_tests.bat  vs2019_x64.bat
cmake/: add_msvc_precompiled_header.cmake  configure_msvc_runtime.cmake
common/: CMakeLists.txt
common/include/: common_macro_helpers.h  counted_ptr.h  finally.h  helpers.h  status_code.h  status_code_description.h  stdafx.h
common/src/: helpers.cpp
curl/: CMakeLists.txt
gumbo/: CMakeLists.txt
spiderpp/: CMakeLists.txt
spiderpp/include/: abstract_download_handler.h  ahref_rel_type.h  base_url_parser.h  compound_parser.h  crawler.h  crawler_options.h  crawler_request.h  crawler_shared_state.h  crawler_worker.h  css_resources_parser.h  curl_http_headers_wrapper.h  custom_uri_channel.h  data_resources_parser.h  data_to_load.h  delegate.h  download_request.h  download_response.h  error_category.h  extraction_type.h  extractor_rule_type.h  flash_resources_parser.h  frames_detector_parser.h  ga_parser.h  get_host_info_request.h  get_host_info_response.h  gumbo_html_node.h  gumbo_html_parser.h  h_parser.h  handler_registry.h  hop.h  hops_chain.h  host_info.h  host_info_provider.h  html_node_model.h  html_resources_parser.h  icrawler_options.h  icustom_data_feed.h  idownload_handler.h  ihost_info_provider.h  ihtml_node.h  (+95 more)
spiderpp/src/: abstract_download_handler.cpp  base_url_parser.cpp  compound_parser.cpp  crawler.cpp  crawler_options.cpp  crawler_shared_state.cpp  crawler_worker.cpp  css_resources_parser.cpp  curl_http_headers_wrapper.cpp  custom_uri_channel.cpp  data_resources_parser.cpp  delegate.cpp  error_category.cpp  flash_resources_parser.cpp  frames_detector_parser.cpp  ga_parser.cpp  gumbo_html_node.cpp  gumbo_html_parser.cpp  h_parser.cpp  handler_registry.cpp  hop.cpp  hops_chain.cpp  host_info.cpp  host_info_provider.cpp  html_node_model.cpp  html_resources_parser.cpp  images_resources_parser.cpp  js_resources_parser.cpp  load_result.cpp  load_schedule.cpp  message.cpp  message_queue.cpp  meta_parser.cpp  meta_robots_helpers.cpp  model_controller.cpp  multi_request_page_loader.cpp  multi_socket_download_handler.cpp  multi_socket_loader.cpp  myhtml_node.cpp  myhtml_parser.cpp  (+49 more)
